# Clion_CMake_Config

./: .gitignore  CMakeLists.txt  generic-gcc-avr.cmake
firmware/: CMakeLists.txt  main.cpp
