#####################################################################
# simple AVR executable
#####################################################################

add_avr_executable(
        ${CMAKE_PROJECT_NAME}
        main.cpp
)

#####################################################################
# libraries to link to
#####################################################################
#target_link_libraries(
#        toggle-led-cpp-${AVR_MCU}.elf
#        mycpplib-${AVR_MCU}
#)